# intentry

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FOUNDATIONS.md  LICENSE  README.md  SECURITY.md
.github/workflows/: docker.yml  release.yml
crates/intr-cli/: Cargo.toml
crates/intr-cli/src/: auth.rs  client.rs  config.rs  error.rs  main.rs  store.rs
crates/intr-cli/src/commands/: commit.rs  completions.rs  config_cmd.rs  diff.rs  edit.rs  eval.rs  fork.rs  init.rs  log_cmd.rs  login.rs  logout.rs  ls.rs  man_cmd.rs  mod.rs  new.rs  parse_cmd.rs  pull.rs  push.rs  run.rs  search.rs  show.rs  space.rs  status.rs  whoami.rs
crates/intr-cli/src/ui/: output.rs
crates/intr-core/: Cargo.toml
crates/intr-core/migrations/: 0001_initial.up.sql
crates/intr-core/src/: error.rs  events.rs  ids.rs  lib.rs  local.rs  remote.rs  types.rs  version.rs
crates/intr-core/src/diff/: body.rs  classify.rs  error.rs  evals.rs  frontmatter.rs  mod.rs  types.rs
crates/intr-core/src/diff/format/: html.rs  mod.rs  text.rs
crates/intr-core/src/store/: mod.rs
crates/intr-parser/: Cargo.toml
crates/intr-parser/src/: lib.rs  parse.rs  types.rs
crates/intr-providers/: Cargo.toml
crates/intr-providers/src/: error.rs  lib.rs  registry.rs  retry.rs  types.rs
crates/intr-providers/src/providers/: anthropic.rs  google.rs  mock.rs  ollama.rs  openai.rs
crates/intr-runtime-local/: Cargo.toml
crates/intr-runtime-local/src/: error.rs  lib.rs
spec/v1/: README.md
