[workspace]
resolver = "3"
members = [
    "crates/intr-cli",
    "crates/intr-core",
    "crates/intr-parser",
    "crates/intr-runtime-local",
    "crates/intr-providers",
]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.94"
license      = "MIT"
repository   = "https://github.com/intentry/intentry"
authors      = ["Asman <asman@intentry.dev>"]
homepage     = "https://intentry.dev"

# ---------------------------------------------------------------------------
# Workspace-level dependency pins.
# Every crate that uses one of these references it as `{ workspace = true }`.
# Do NOT duplicate version numbers across crate Cargo.toml files.
# ---------------------------------------------------------------------------

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap          = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
indicatif     = "0.18"
dialoguer     = "0.12"
owo-colors    = "4"
dirs          = "6"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow    = "1"

# IDs — UUIDv7 (Postgres 18 native; Rust: uuid crate)
uuid = { version = "1", features = ["v7", "serde"] }

# Semver for prompt versioning
semver = { version = "1", features = ["serde"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Content hashing
sha2 = "0.11"
hex  = "0.4"

# Diff / text comparison
similar   = { version = "3", features = ["text"] }

# XML / HTML output escaping
quick-xml = "0.39"

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Testing (snapshot + property-based)
insta    = { version = "1", features = ["json", "yaml"] }
proptest = "1"

# Database — behind feature flags in intr-core.
# sqlx handles both SQLite (local/offline CLI) and PostgreSQL (cloud API).
# Using a single library avoids the libsqlite3-sys link conflict that occurs
# when rusqlite and sqlx-sqlite are both present.
sqlx     = { version = "0.8", features = [
    "sqlite", "postgres", "uuid", "chrono", "json",
    "runtime-tokio-rustls",
] }

# S3-compatible object storage (Cloudflare R2 blobs) — used by RemoteStore.
# aws-sdk-s3 supports custom endpoints, so R2 works without any extra crate.
aws-sdk-s3        = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-config        = { version = "1", features = ["behavior-version-latest"] }

# HTTP client for provider adapters
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Secret string handling (prevents accidental logging of API keys)
secrecy = { version = "0.8", features = ["serde"] }

# Async utilities
async-trait    = "0.1"
futures        = "0.3"
futures-util   = "0.3"

# Backoff / retry
tokio-retry = "0.3"
