[package]
name        = "intr-parser"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
homepage.workspace    = true
description = "Parser for the .prompt file format (Dotprompt-compatible)"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
