[package]
name        = "intr-providers"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
description = "Intentry model provider abstraction — Anthropic, OpenAI, Google, Ollama"

[lib]
crate-type = ["lib"]

[dependencies]
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
reqwest      = { workspace = true }
secrecy      = { workspace = true }
async-trait  = { workspace = true }
futures      = { workspace = true }
futures-util = { workspace = true }
tokio-retry  = { workspace = true }
