[package]
name         = "intr-runtime-local"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
homepage.workspace     = true
description  = "Local execution runtime for Intentry — runs .prompt files against model providers"

[dependencies]
intr-parser   = { path = "../intr-parser" }
intr-providers = { path = "../intr-providers" }

handlebars = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
